--- a/src/frontend/landing/Header.css
+++ b/src/frontend/landing/Header.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   background-color: var(--tertiary);
 }
 .header__nav__image {
@@ -71,7 +71,7 @@
   margin: 1rem;
   padding: 1rem 3rem;
   font-size: 1rem;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 .btn--auth--view {
   display: none;
