--- a/src/frontend/landing/Category.css
+++ b/src/frontend/landing/Category.css
@@ -5,7 +5,7 @@
 }
 .category__title {
   text-decoration: underline;
-  font-size: 1.75rem;
+  font-size: 2rem;
   text-align: center;
   margin: 2rem;
   padding: 0.2rem;
@@ -32,7 +32,8 @@
   font-size: 0.75rem;
   font-weight: normal;
   color: var(--primary--light);
-  margin: 0.5rem 0;
+  margin: 0.5rem auto;
+  max-width: 80%;
 }
 .category__banner {
   max-width: 30rem;
@@ -54,9 +55,10 @@
     width: 30rem;
   }
   .category__header__card h1 {
-    font-size: 2.25rem;
+    font-size: 2rem;
   }
   .category__header__card h2 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
+    max-width: 45rem;
   }
 }
