--- a/src/frontend/utility/styles.css
+++ b/src/frontend/utility/styles.css
@@ -8,7 +8,7 @@
   --tertiary--light: #151c24;
   --cta: #e36b5c;
   --white: rgb(250, 246, 246);
-  --dismiss: #4d4b4b;
+  --dismiss: #27262b;
   --footer--one: #e2e1e1;
   --price: green;
   --tag: rgb(177, 3, 32);
