--- a/src/frontend/utility/styles.css
+++ b/src/frontend/utility/styles.css
@@ -10,7 +10,7 @@
   --white: rgb(250, 246, 246);
   --dismiss: #27262b;
   --dismiss--light: #3e3d41;
-  --footer--one: #e2e1e1;
+  --footer--one: #757575;
   --price: green;
   --tag: rgb(177, 3, 32);
   --rating: goldenrod;
