--- a/src/frontend/utility/videogrid/videogrid.css
+++ b/src/frontend/utility/videogrid/videogrid.css
@@ -31,7 +31,8 @@
 .sidebar__options.selected {
   background-color: var(--tertiary--light);
 }
-.sidebar__options span {
+.sidebar__options__span {
+  display: none;
   margin: 0.5rem 0;
 }
 .main {
@@ -47,8 +48,13 @@
   z-index: 4;
 }
 .filter {
+  margin: 0 0.95rem;
+  width: 94%;
   overflow-x: auto;
-  padding: 1.3rem 0.5rem 1rem;
+  padding: 1.5rem 0.5rem 0.75rem 0;
+}
+.filter::-webkit-scrollbar {
+  height: 0px;
 }
 .filter__option {
   font-size: 1rem;
@@ -66,15 +72,66 @@
   border: 1px solid var(--tag);
 }
 .thumbnail {
+  width: 100%;
+  border-radius: 5px;
+}
+.thumbnail__info {
+  display: flex;
+  align-items: center;
+  z-index: 3;
+  position: relative;
+}
+.thumbnail__banner {
   margin: 0;
   width: 100%;
   border-radius: 5px;
+  cursor: pointer;
 }
-.thumbnail__banner {
-  width: 100%;
-  border-radius: 5px;
+.thumbnail__title {
+  color: var(--white);
+  font-size: 1.05rem;
+  margin: 0.5rem;
+}
+.thumbnail__description {
+  color: var(--footer--one);
+  font-size: 1rem;
+  font-weight: normal;
+  margin: 0.5rem 0;
+}
+.thumbnail__info__icon {
+  align-self: start;
+  margin: 0.75rem 0;
+  color: var(--white);
+  font-size: 1.25rem;
+}
+.thumbnail__submenu {
+  position: absolute;
+  right: 0.75rem;
+  top: 40%;
+  width: max-content;
+  color: var(--white);
+  font-size: 1rem;
+  background-color: var(--dismiss--light);
+  z-index: 4;
+}
+.thumbnail__submenu h1 {
+  padding: 0.5rem 1.25rem 0.5rem 0;
+  cursor: pointer;
+}
+.thumbnail__submenu h1:hover {
+  background-color: var(--dismiss);
+}
+.fa-ellipsis-vertical {
+  border: 1px solid var(--white);
+  border-radius: 50%;
+  padding: 0.35rem 0.85rem;
 }
 
+@media screen and (min-width: 325px) {
+  .sidebar__options__span {
+    display: inline;
+  }
+}
 @media screen and (min-width: 1024px) {
   .videogrid {
     grid-template-columns: 20% 80%;
