--- a/src/frontend/utility/styles.css
+++ b/src/frontend/utility/styles.css
@@ -36,11 +36,20 @@ body {
   background-color: var(--primary);
   color: var(--white);
 }
+.tag {
+  color: var(--tag);
+}
 .md {
   font-size: 1.15rem;
 }
 .lg {
   font-size: 1.5rem;
+}
+.mg--full {
+  margin: 1rem 0;
+}
+.mg--half {
+  margin: 0.5rem 0;
 }
 .shadow {
   box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%),
