--- a/src/frontend/utility/videogrid/videogrid.css
+++ b/src/frontend/utility/videogrid/videogrid.css
@@ -43,7 +43,6 @@
   grid-template-areas:
     'main'
     'sidebar';
-  align-self: flex-start;
 }
 .sidebar {
   grid-area: sidebar;
@@ -113,6 +112,9 @@
   background-color: var(--tag);
   border: 1px solid var(--tag);
 }
+.filter__option__input {
+  display: none;
+}
 .thumbnail {
   width: 100%;
   border-radius: 5px;
@@ -120,6 +122,7 @@
 .thumbnail__info {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   z-index: 3;
   position: relative;
 }
@@ -187,7 +190,7 @@
   }
   .sidebar.sidefixed {
     position: static;
-    height: 100%;
+    height: 63vh;
   }
   .sidebar__options {
     flex-direction: row;
