--- a/src/frontend/utility/navbar/navbar.css
+++ b/src/frontend/utility/navbar/navbar.css
@@ -34,9 +34,13 @@
   font-weight: normal;
   margin: 0.2rem;
 }
+.search__ctr form {
+  width: 100%;
+  height: 100%;
+}
 .search__input {
   height: 100%;
-  width: 95%;
+  width: 100%;
   font-size: 1.25rem;
   color: var(--white);
   background-color: var(--tertiary);
