--- a/src/frontend/utility/styles.css
+++ b/src/frontend/utility/styles.css
@@ -100,6 +100,30 @@ body {
   border: 2px solid rgb(138, 29, 48);
   background-color: rgb(138, 29, 48);
 }
+
+/* Main Screen Styling */
+.main {
+  grid-area: main;
+  min-height: 75vh;
+}
+.main__grid {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-areas:
+    'main'
+    'sidebar';
+}
+
+@media screen and (min-width: 1024px) {
+  .main {
+    min-height: 80vh;
+  }
+  .main__grid {
+    grid-template-columns: 20% 80%;
+    grid-template-areas: 'sidebar main';
+  }
+}
+
 @media screen and (min-width: 1650px) {
   body {
     width: 1650px;
