bug fix in search bar

--- a/src/frontend/components/filters/filters.css
+++ b/src/frontend/components/filters/filters.css
@@ -7,8 +7,10 @@
   padding: 1.5rem 0.5rem 0.75rem 0;
 }
 .filter::-webkit-scrollbar {
-  height: 0px;
+  height: 3px;
+  display: none;
 }
+
 .filter__option {
   font-size: 1rem;
   font-weight: bold;
