--- a/src/frontend/components/navbar/navbar.css
+++ b/src/frontend/components/navbar/navbar.css
@@ -52,8 +52,12 @@
   text-align: center;
   font-size: 1rem;
 }
-.btn--auth--view {
+.end__span {
   display: none;
+}
+.end__btn {
+  border-radius: 50%;
+  padding: 0.65rem 0.35rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -69,7 +73,11 @@
   .header__nav__auth {
     display: block;
   }
-  .btn--auth--view {
-    display: inline-block;
+  .end__span {
+    display: inline;
+  }
+  .end__btn {
+    border-radius: 5px;
+    padding: 0.65rem 0.55rem;
   }
 }
