--- a/src/frontend/pages/authentication/authentication.css
+++ b/src/frontend/pages/authentication/authentication.css
@@ -54,6 +54,14 @@
 .input__eye {
   color: var(--black);
 }
+.signout__card {
+  margin: 15% auto;
+  padding: 1rem;
+}
+.signout__card__title {
+  font-size: 1.25rem;
+}
+
 @media screen and (min-width: 768px) {
   .authentication {
     width: 30rem;
