--- a/src/frontend/pages/authentication/authentication.css
+++ b/src/frontend/pages/authentication/authentication.css
@@ -61,7 +61,11 @@
 .signout__card__title {
   font-size: 1.25rem;
 }
-
+.alert {
+  padding: 0.5rem;
+  margin: 0;
+  border-radius: 5px;
+}
 @media screen and (min-width: 768px) {
   .authentication {
     width: 30rem;
