--- a/src/frontend/components/sidebar/sidebar.css
+++ b/src/frontend/components/sidebar/sidebar.css
@@ -24,8 +24,9 @@
   font-size: 0.75rem;
   font-weight: normal;
   padding: 0.75rem;
+  color: var(--white);
 }
-.sidebar__options.selected {
+.selected {
   background-color: var(--tertiary--light);
 }
 .sidebar__options__span {
