--- a/src/frontend/components/videogrid/videogrid.css
+++ b/src/frontend/components/videogrid/videogrid.css
@@ -47,12 +47,12 @@
 .thumbnail__submenu {
   position: absolute;
   right: 0.75rem;
-  top: 40%;
+  top: 3rem;
   width: max-content;
   color: var(--white);
   font-size: 1rem;
   background-color: var(--dismiss--light);
-  z-index: 4;
+  z-index: 10;
 }
 .thumbnail__submenu h1 {
   padding: 0.5rem 1.25rem 0.5rem 0;
