--- a/src/frontend/components/videogrid/videogrid.css
+++ b/src/frontend/components/videogrid/videogrid.css
@@ -46,8 +46,8 @@
 }
 .thumbnail__submenu {
   position: absolute;
-  right: 0.75rem;
-  top: 3rem;
+  right: 2.75rem;
+  bottom: 1.5rem;
   width: max-content;
   color: var(--white);
   font-size: 1rem;
