--- a/src/frontend/components/videogrid/videogrid.css
+++ b/src/frontend/components/videogrid/videogrid.css
@@ -65,6 +65,7 @@
   font-size: 1rem;
   background-color: var(--dismiss--light);
   z-index: 10;
+  border-radius: 5px;
 }
 .thumbnail__submenu h1 {
   padding: 0.5rem 1.25rem 0.5rem 0;
@@ -72,6 +73,9 @@
 }
 .thumbnail__submenu h1:hover {
   background-color: var(--dismiss);
+}
+.thumbnail__submenu__delete {
+  color: var(--cta);
 }
 .fa-ellipsis-vertical {
   border: 1px solid var(--white);
