--- a/src/frontend/pages/playlist/playlist.css
+++ b/src/frontend/pages/playlist/playlist.css
@@ -1,2 +1,31 @@
 @import '../../utility/styles.css';
 @import '../liked/liked.css';
+@import '../../components/videogrid/videogrid.css';
+
+.playlist__banner {
+  margin: 0;
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+}
+.playlist__banner img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.playlist__banner::after {
+  content: 'hello';
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: var(--black);
+  width: 50%;
+  height: 100%;
+}
+.playlist.thumbnail__submenu {
+  position: absolute;
+  right: 3rem;
+  bottom: -1rem;
+  border-radius: 5px;
+}
