CRUD operations on playlists completed

--- a/src/frontend/components/sidebar/sidebar.css
+++ b/src/frontend/components/sidebar/sidebar.css
@@ -25,6 +25,7 @@
   font-weight: normal;
   padding: 0.75rem;
   color: var(--white);
+  width: 100%;
 }
 .selected {
   background-color: var(--tertiary--light);
