--- a/src/frontend/components/navbar/navbar.css
+++ b/src/frontend/components/navbar/navbar.css
@@ -57,13 +57,33 @@
   font-size: 1rem;
 }
 .end__span {
+  display: inline;
+}
+.menu {
+  color: var(--white);
+  height: 5rem;
+  padding: 5% 0;
+}
+.menu__icon {
+  font-size: 1.75rem;
+  font-weight: normal;
+  position: relative;
+}
+.submenu {
+  position: absolute;
+  top: 5rem;
+  right: 0.25rem;
+  background-color: var(--tertiary);
+  padding: 0.5rem;
   display: none;
 }
 .end__btn {
   border-radius: 50%;
-  padding: 0.65rem 0.35rem;
+  padding: 0.25rem 0.15rem;
 }
-
+.menu:hover > .submenu {
+  display: block;
+}
 @media screen and (min-width: 1024px) {
   .header__nav__image {
     height: 60px;
@@ -76,12 +96,5 @@
   }
   .header__nav__auth {
     display: block;
-  }
-  .end__span {
-    display: inline;
-  }
-  .end__btn {
-    border-radius: 5px;
-    padding: 0.65rem 0.55rem;
   }
 }
