--- a/src/frontend/pages/notfound/notfound.css
+++ b/src/frontend/pages/notfound/notfound.css
@@ -12,6 +12,15 @@
   width: 90%;
   height: auto;
   object-fit: contain;
-  max-width: 45rem;
+  max-width: 25rem;
+  border-radius: 5px;
+}
+.notfound__primary {
+  color: var(--tag);
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 1rem;
+  background-color: var(--white);
+  padding: 0.5rem;
   border-radius: 5px;
 }
