--- a/src/frontend/components/modal/modal.css
+++ b/src/frontend/components/modal/modal.css
@@ -48,3 +48,9 @@ input[type='checkbox'] {
   color: var(--tag);
   margin: 0.5rem 0.5rem 1.25rem;
 }
+.textarea {
+  max-width: 100%;
+  height: 8rem;
+  border-radius: 0px;
+  margin: 0;
+}
