--- a/src/frontend/components/sidebar/sidebar.css
+++ b/src/frontend/components/sidebar/sidebar.css
@@ -26,6 +26,7 @@
   padding: 0.75rem;
   color: var(--white);
   width: 100%;
+  cursor: pointer;
 }
 .selected {
   background-color: var(--tertiary--light);
