--- a/src/frontend/components/modal/modal.css
+++ b/src/frontend/components/modal/modal.css
@@ -50,7 +50,9 @@ input[type='checkbox'] {
 }
 .textarea {
   max-width: 100%;
-  height: 8rem;
+  height: 6rem;
   border-radius: 0px;
   margin: 0;
+  font-size: 1rem;
+  padding: 0;
 }
