--- a/src/frontend/components/modal/modal.css
+++ b/src/frontend/components/modal/modal.css
@@ -51,7 +51,7 @@ input[type='checkbox'] {
 .textarea {
   max-width: 100%;
   height: 6rem;
-  border-radius: 0px;
+  border-radius: 0;
   margin: 0;
   font-size: 1rem;
   padding: 0;
