--- a/src/frontend/utility/styles.css
+++ b/src/frontend/utility/styles.css
@@ -29,8 +29,9 @@ html {
 }
 body {
   margin: 0 auto;
-  width: 99.5vw;
   height: 100vh;
+  width: 100%;
+  max-width: fit-content;
   overflow-x: hidden;
   background-color: var(--tertiary--light);
   font-family: 'BebasNeue';
