--- a/src/frontend/components/filters/filters.css
+++ b/src/frontend/components/filters/filters.css
@@ -53,6 +53,7 @@
   border-radius: 120px;
   padding: 0.75rem 1.3rem;
   margin: 0 0.5rem;
+  cursor: pointer;
 }
 .filter__option.chosen {
   color: var(--white);
