--- a/src/frontend/components/navbar/navbar.css
+++ b/src/frontend/components/navbar/navbar.css
@@ -68,6 +68,7 @@
   font-size: 1.75rem;
   font-weight: normal;
   position: relative;
+  color: var(--white);
 }
 .submenu {
   position: absolute;
