--- a/src/frontend/pages/singleVideo/singlevideo.css
+++ b/src/frontend/pages/singleVideo/singlevideo.css
@@ -139,6 +139,15 @@ iframe {
   background-color: var(--tertiary--light);
   border: 1px solid var(--dismiss--light);
 }
+.back {
+  color: var(--tertiary);
+  padding: 1rem;
+  font-size: 1.25rem;
+  font-weight: 500;
+  background-color: var(--white);
+  border-radius: 5px;
+}
+
 /*Media Query Screens */
 @media screen and (min-width: 1024px) {
   .video__iframe {
